buildscript {

  ext {
    springBootVersion = '2.2.4.RELEASE'
    guavaVersion = '28.1-jre'
    groovyVersion = '3.0.1'
  }

  repositories {
    mavenCentral()
    jcenter()
  }

  dependencies {
    classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
  }

}

version = '1.0.0-SNAPSHOT'
group = 'org.hidetake.stubyaml'

subprojects {

  apply plugin: 'java'
  apply plugin: 'maven-publish'

  group = parent.group
  version = parent.version

  sourceCompatibility = '11'

  compileJava {
    options.compilerArgs = [
      "--release", "8"
    ]
  }

  repositories {
    mavenLocal()
    mavenCentral()
    jcenter()
    maven {
      url 'https://jitpack.io'
    }
  }

  dependencies {
    compileOnly 'org.projectlombok:lombok:1.18.10'
    annotationProcessor 'org.projectlombok:lombok:1.18.10'
    annotationProcessor('com.github.bsideup.jabel:jabel-javac-plugin:0.2.0') {
      exclude group: 'net.bytebuddy', module: 'byte-buddy'
      exclude group: 'net.bytebuddy', module: 'byte-buddy-agent'
    }

    annotationProcessor 'net.bytebuddy:byte-buddy:1.10.8'
    annotationProcessor 'net.bytebuddy:byte-buddy-agent:1.10.8'
  }

  task sourcesJar(type: Jar, dependsOn: classes) {
    classifier = 'sources'
    from sourceSets.main.allSource
  }

}